fixed spacing per design feedback

--- a/sass/px-file-upload-sketch.scss
+++ b/sass/px-file-upload-sketch.scss
@@ -52,6 +52,7 @@ $inuit-enable-btn--secondary: true;
 // Trumps
 
 $inuit-enable-paddings--tiny : true;
+$inuit-enable-margins--tiny : true;
 @import "px-spacing-design/_trumps.spacing.scss";
 @import "inuit-clearfix/_trumps.clearfix.scss";
 @import "px-spacing-responsive-design/_trumps.spacing-responsive.scss";
